--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ find_package(glm)
 find_package(nlohmann_json)
 find_package(assimp)
 find_package(stb)
-target_link_libraries(${PROJECT_NAME} glfw glad::glad spdlog::spdlog glm::glm nlohmann_json::nlohmann_json assimp::assimp stb::stb)
+find_package(rapidfuzz)
+target_link_libraries(${PROJECT_NAME} glfw glad::glad spdlog::spdlog glm::glm nlohmann_json::nlohmann_json assimp::assimp stb::stb rapidfuzz::rapidfuzz)
