feat: improved input processing

--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,12 @@
 [submodule "src/utility/fs_utils"]
 	path = src/utility/fs_utils
 	url = git@github.com:cpp-toolbox/fs_utils.git
+[submodule "src/utility/expiring_temporal_vector"]
+	path = src/utility/expiring_temporal_vector
+	url = git@github.com:cpp-toolbox/expiring_temporal_vector.git
+[submodule "src/utility/input_state"]
+	path = src/utility/input_state
+	url = git@github.com:cpp-toolbox/input_state.git
+[submodule "src/utility/limited_vector"]
+	path = src/utility/limited_vector
+	url = git@github.com:cpp-toolbox/limited_vector.git
