--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "src/utility/limited_vector"]
 	path = src/utility/limited_vector
 	url = git@github.com:cpp-toolbox/limited_vector.git
+[submodule "src/utility/regex_command_runner"]
+	path = src/utility/regex_command_runner
+	url = git@github.com:cpp-toolbox/regex_command_runner.git
