--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "src/utility/config_file_parser"]
 	path = src/utility/config_file_parser
 	url = git@github.com:cpp-toolbox/config_file_parser.git
+[submodule "src/utility/lsp_client"]
+	path = src/utility/lsp_client
+	url = git@github.com:cpp-toolbox/lsp_client.git
